<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/mainArea"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toTopOf="@+id/mainLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ru.elnorte.tfs_spring_2024_reshetnikov.MessageViewGroup
            android:id="@+id/messageBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />

    </ScrollView>

    <LinearLayout
        android:id="@+id/mainLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainArea">

        <LinearLayout
            android:id="@+id/avatarLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="1dp">

            <Button
                android:id="@+id/emptyAvatarButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/empty_avatar" />

            <Button
                android:id="@+id/tinyAvatarButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tiny_avatar" />

            <Button
                android:id="@+id/regularAvatarButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/regular_avatar" />

            <Button
                android:id="@+id/hugeAvatarButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/huge_avatar" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/customMessageLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <EditText
                android:id="@+id/customNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:text="@string/desired_name" />

            <Button
                android:id="@+id/setCustomName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/set_name" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/messageLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/noMessageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no_message" />

            <Button
                android:id="@+id/regularMessageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/regular_message" />

            <Button
                android:id="@+id/veryLongMessageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/very_long_message" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nameLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/noNameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no_name" />

            <Button
                android:id="@+id/regularNameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/regular_name" />

            <Button
                android:id="@+id/veryLongNameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/very_long_name" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/emojiLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addRandomEmojiButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_random_emoji" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
